# syntropy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
axiom/: __init__.py  version.py
axiom/core/: config.py  registry.py
axiom/examples/: __init__.py  tf_effaxnet_2d.ipynb  tf_effaxnet_3d.ipynb  torch_effaxnet_2d.ipynb
axiom/tf/: __init__.py
axiom/tf/layers/: axial_attention.py  conv_blocks.py
axiom/tf/models/: __init__.py  builder.py  effaxnet_2d.py  effaxnet_3d.py
axiom/tf/train/: __init__.py  train_2d.py  train_3d.py
axiom/torch/: __init__.py
axiom/torch/layers/: __init__.py  channel_attention.py  conv_blocks.py
axiom/torch/models/: effaxnet_2d.py  effaxnet_3d.py
axiom/torch/train/: train_3d.py
docs/: __init__.py  api_reference.md  tutorials.md
docs/architecture_notes/: design_principles.md  effaxnet_2d.md  effaxnet_3d.md
syntropy/: __init__.py  version.py
syntropy/core/: __init__.py  config.py  utils.py
syntropy/examples/: __init__.py  mnist_effaxnet_classification.ipynb  tf_effaxnet_2d.ipynb  tf_effaxnet_3d.ipynb  torch_effaxnet_3d.ipynb
syntropy/tf/: __init__.py
syntropy/tf/layers/: __init__.py  axial_attention.py  channel_attention.py
syntropy/tf/models/: builder.py  effaxnet_2d.py  effaxnet_3d.py
syntropy/torch/: __init__.py
syntropy/torch/layers/: axial_attention.py
syntropy/torch/models/: __init__.py  builder.py
syntropy/torch/train/: train_2d.py
tests/: test_shapes.py  test_tf_layers.py  test_tf_models.py  test_torch_layers.py  test_torch_models.py
